# aws-sigv4-proxy-spike

./: .gitignore  cdk.context.json  cdk.json  pyproject.toml
scripts/: search_aws_auth.py  search_basic_auth.py  search_basic_auth_via_proxy.py
src/: app.py  app_tier.py  network.py
